<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:background="@drawable/bg_main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/fl_main_appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_do_list"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    />
                <ImageView
                    android:layout_gravity="end|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_android_24"
                    />
            </FrameLayout>
            <EditText
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hintSearch"
                android:background="@drawable/bg_et_main"
                />
        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#67B9B7B7"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:padding="8dp">

            <TextView
                android:layout_alignBottom="@+id/view_main"
                android:layout_marginBottom="4dp"
                android:paddingEnd="12dp"
                android:id="@+id/tv_main_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/today"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:id="@+id/view_main"
                android:layout_alignStart="@+id/tv_main_today"
                android:layout_alignEnd="@id/tv_main_today"
                android:layout_width="wrap_content"
                android:layout_height="3.5dp"
                android:background="@drawable/bg_view"
                android:layout_alignParentBottom="true"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/SecondaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/delete"
                android:textSize="12sp"
                app:icon="@drawable/ic_baseline_delete_24"
                app:iconSize="18sp" />
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_state"
            />
        <TextView
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_text"
            />
    </LinearLayout>
<com.google.android.material.button.MaterialButton
    android:id="@+id/mb_main_addNewTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    app:icon="@drawable/ic_baseline_add_24"
    android:text="@string/add_new_task"
    android:textAllCaps="true"
    android:layout_margin="12dp"
    android:minHeight="65dp"
    app:cornerRadius="45dp"
    />
</androidx.coordinatorlayout.widget.CoordinatorLayout>