<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deteil.TaskDetailActivity">
 <com.google.android.material.appbar.AppBarLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     >
     <RelativeLayout
         android:padding="12dp"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         >
         <ImageView
              android:id="@+id/iv_main_backIcon"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_baseline_arrow_back_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
             android:layout_marginStart="4dp"
             android:layout_centerVertical="true"
             android:id="@+id/tv_main_editText"
             android:layout_toEndOf="@+id/iv_main_backIcon"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add_task"
             />
         <ImageView
             android:visibility="gone"
             tools:visibility="visible"
             android:src="@drawable/ic_baseline_delete_24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             />
     </RelativeLayout>
 </com.google.android.material.appbar.AppBarLayout>

 <LinearLayout
     android:layout_marginTop="8dp"
     android:orientation="vertical"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
   <LinearLayout
       android:weightSum="3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <FrameLayout
           android:background="@drawable/redus"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="46dp">
         <TextView
             android:textColor="@color/black"
             android:layout_gravity="center"
             android:text="@string/high"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
           <ImageView
               android:padding="2dp"
               android:layout_marginEnd="16dp"
               android:layout_gravity="end|center_vertical"
               android:background="@drawable/bg_hith_check"
               android:layout_width="18dp"
               android:layout_height="18dp"/>
       </FrameLayout>
       <FrameLayout
           android:background="@drawable/redus"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="46dp">
           <TextView
               android:textColor="@color/black"
               android:layout_gravity="center"
               android:text="@string/normal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <ImageView
               android:layout_marginEnd="16dp"
               android:layout_gravity="end|center_vertical"
               android:background="@drawable/bg_normal"
               android:layout_width="18dp"
               android:layout_height="18dp"
               android:padding="2dp"
               android:src="@drawable/ic_baseline_check_24"
               />
       </FrameLayout>
       <FrameLayout
           android:background="@drawable/redus"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="46dp">
           <TextView
               android:textColor="@color/black"
               android:layout_gravity="center"
               android:text="@string/low"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <ImageView
               android:padding="2dp"
               android:layout_marginEnd="16dp"
               android:layout_gravity="end|center_vertical"
               android:background="@drawable/bg_low"
               android:layout_width="18dp"
               android:layout_height="18dp"/>
       </FrameLayout>
   </LinearLayout>
     <EditText
         android:layout_marginTop="8dp"
         android:padding="6dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
         android:hint="@string/add_new_taskForToday"
         android:textColorHint="@color/defaultTextColor"
         android:textColor="@color/black"
         />
 </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="65dp"
        android:layout_marginTop="30dp"
        app:cornerRadius="35dp"
        android:layout_gravity="bottom|center_horizontal"
        app:icon="@drawable/ic_baseline_check_24"
        android:textAllCaps="true"
        android:text="@string/save_task"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>